base/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: nginx.lab7.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stateless-nginx-svc
            port:
              number: 80
